# oci-always-free

./: .gitignore  README.md  oci.py  pyproject.toml
terraform/: example.terraform.tfvars  main.tf
